# ChangeLog for app-shells/zsh
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*zsh-5.0.0 (13 Aug 2012)

  12 May 2012; Martin Väth <martin@mvath.de>
  Copy from the portage tree to add support for run-help and for removal of
  unrequested completion functions (in particular, do not put them in $fpath).
  Clear previous ChangeLog.