@@ -1,1 +1,1 @@
-DIST noscript-2.5.xpi 526190 SHA256 a292580991fc5f855dd92977d22c2c076277d1ca7313bc25472022828377ff1a SHA512 8cee2d3af59f25cf9aa1b998d0b402bc6086c586f252af161830fa35d52a666fb09fdbc3bf31f7021e12f850fcd497b26165cc159b028732f0bc35f14c614ef9 WHIRLPOOL 59a160c704e755f7ecc55ac3bb7f48ed5e8503525526332966181699539c01fab5ff42b5bc3506ee7017ab2dda63b6c80624e0fd4592ee44cbb3859f4e604ad3
+DIST noscript-2.5.1.xpi 526553 SHA256 5f1228ae338e9b6a82d14559772393eba58e0e3fe00b7b36f0a2abe9e0e54ec3 SHA512 b3a15ab057d12a03a8d6048d7276d321d64b02d46f22100f7da79dd3a63e0c04f78b9ac06bb0e11926f0cc9a29393c5a50c026d393c4e7d55e375764729c336b WHIRLPOOL b11415aaf8c2806296dffdeddf764005d8e4fc9a361c186d335c051d810014b5ee1b32cbafa03b51855a16040a0c50d27b2549952093e97aa818debca71bbc6e
